# fxbilibili

./: .env.example  Cargo.toml  README.md
src/: lib.rs  main.rs  models.rs  opengraph.rs  routes.rs  services.rs
src/errors/: bilibili.rs
src/models/: config.rs  response.rs  video.rs
src/routes/: index.rs  video.rs
src/services/: bilibili.rs
