[package]
name = "fxbilibili"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
async-trait = "0.1.88"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
mockall = "0.13.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
chrono = "0.4.41"
